@@ -338,12 +338,12 @@ public class LoadFlowActionSimulator implements ActionSimulator {
                     ExpressionNode conditionExpr = ((ExpressionCondition) rule.getCondition()).getNode();
                     return ActionExpressionEvaluator.evaluate(conditionExpr, evalContext).equals(Boolean.TRUE);
                 })
-                .collect(Collectors.toList());
+                .toList();
         List<String> testActionIds = activedRules.stream()
                                 .flatMap(r -> r.getActions().stream())
                                 .distinct()
                                 .filter(id -> !context.isTested(id))
-                                .collect(Collectors.toList());
+                                .toList();
 
         if (testActionIds.isEmpty()) {
             return;
